tests/src/frontend/syntax/invalid/duplicate_lambda_named_params.sk
fun main(): void {
  l = {p, p} ~> p;
  print_raw(l{p => "Fail"})
}
